fix first table row tooltips not being visible

--- a/app/common/renderer/assets/stylesheets/main.css
+++ b/app/common/renderer/assets/stylesheets/main.css
@@ -100,3 +100,7 @@ body::-webkit-scrollbar-corner {
 .ant-splitter-bar {
   margin: 6px;
 }
+
+.ant-table-sticky-holder {
+  z-index: 2 !important;
+}
